18/07/2024 - Fixing extension name file on photo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <img src="IMG_0267.jpg" height="200" width="200" alt="Photo de Ismael Ibrahima">
+        <img src="IMG_0267.JPG" height="200" width="200" alt="Photo de Ismael Ibrahima">
         <section id="about">
             <h2>Présentation</h2>
             <p>Améliorez votre maîtrise de l’anglais avec un enseignement personnalisé. En tant que professionnel certifié par l’école en ligne Ef English Live, je suis dédié à aider les collégiens, lycéens et adultes à parfaire leur maîtrise de l’anglais. Mon approche pédagogique repose sur la consolidation des fondamentaux, une étape cruciale pour améliorer la fluidité à l’oral et à l’écrit dans la vie quotidienne et à l’école.</p>
